# fotoplastikon

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
mesh/: cube_divided.fbx  cube_with_quads.fbx
shaders/: fragment.glsl  vertex.glsl
src/: main.cpp
src/common/: LoadShader.cpp  Material.cpp  Material.h  Shader.cpp  Shader.h  StaticMesh.cpp  StaticMesh.h
src/general_components/: CameraComponent.cpp  CameraComponent.h  RegistryHierarchy.cpp  RegistryHierarchy.h  TransformComponent.cpp  TransformComponent.h
src/renderer/: DirectionalLightComponent.cpp  DirectionalLightComponent.h  GLShader.cpp  GLShader.h  LightComponent.cpp  LightComponent.h  LoadShader.cpp  LoadShader.h  MaterialComponent.cpp  MaterialComponent.h  MeshComponent.cpp  MeshComponent.h  PointLightComponent.cpp  PointLightComponent.h  Renderer.cpp  Renderer.h  SpotLightComponent.cpp  SpotLightComponent.h  Texture.cpp  Texture.h
